# Catalax

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  TestAnalysis.ipynb  TestBayes.ipynb  TestExperiment.ipynb  TestMCMC.ipynb  TestModel.ipynb  TestObservables.ipynb  TestOptimization.ipynb  create.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  test.py
.github/workflows/: lint.yml  publish.yml  test-publish.yml  tests.yml
catalax/: __init__.py  objectives.py  predictor.py  surrogate.py  widget.py
catalax/dataset/: __init__.py  croissant.py  dataset.py  enzymeml.py  measurement.py  metrics.py
catalax/dvc/: __init__.py  datainput.py  enzymemlimport.py  mcmc.py  model.py
catalax/identifiability/: __init__.py  sensitivity.py  structural.py
catalax/laws/: __init__.py  activation.py  enzymatic.py  hill_type.py  inhibition.py  mass_action.py
catalax/mcmc/: __init__.py  error.py  loo.py  mcmc.py  plotting.py  predictive.py  priors.py  protocols.py  results.py
catalax/model/: __init__.py  assignment.py  base.py  constant.py  enzymeml.py  equation.py  inaxes.py  model.py  ode.py  parameter.py  reaction.py  simconfig.py  species.py  state.py  stoich.py  types.py  utils.py
catalax/neural/: __init__.py  closureode.py  ensemble.py  mlp.py  neuralbase.py  neuralode.py  rateflow.py  rbf.py  strategy.py  trainer.py  universalode.py  utils.py
catalax/tools/: __init__.py  enzymeml.py  optimization.py  simulation.py  stack.py  symbolicmodule.py  visualization.py
catalax/uncertainty/: __init__.py  base.py
docs/: api_docs.json  docs.json  welcome.mdx
docs/api/: catalax-dataset-__init__.mdx  catalax-dataset-croissant.mdx  catalax-dataset-dataset.mdx  catalax-dataset-measurement.mdx  catalax-dataset-metrics.mdx  catalax-mcmc-__init__.mdx  catalax-mcmc-mcmc.mdx  catalax-mcmc-models-__init__.mdx  catalax-mcmc-models-init_estimator.mdx  catalax-mcmc-plotting.mdx  catalax-mcmc-priors.mdx  catalax-mcmc-protocols.mdx  catalax-mcmc-results.mdx  catalax-model-__init__.mdx  catalax-model-assignment.mdx  catalax-model-base.mdx  catalax-model-constant.mdx  catalax-model-enzymeml.mdx  catalax-model-equation.mdx  catalax-model-inaxes.mdx  catalax-model-model.mdx  catalax-model-ode.mdx  catalax-model-parameter.mdx  catalax-model-reaction.mdx  catalax-model-simconfig.mdx  catalax-model-species.mdx  catalax-model-state.mdx  catalax-model-stoich.mdx  catalax-model-types.mdx  catalax-model-utils.mdx  catalax-neural-__init__.mdx  catalax-neural-mlp.mdx  catalax-neural-neuralbase.mdx  catalax-neural-neuralode.mdx  catalax-neural-penalties-__init__.mdx  catalax-neural-penalties-penalties.mdx  catalax-neural-penalties-stoich_mat.mdx  catalax-neural-penalties-uode.mdx  catalax-neural-penalties-weight.mdx  catalax-neural-plots-__init__.mdx  (+18 more)
docs/basic/: data-management.mdx  kinetic-laws.mdx  model-class.mdx  parameter-opt.mdx  simulation.mdx
docs/hmc/: error-models.mdx  loo.mdx  mcmc-basic.mdx  pre-post-models.mdx  surrogate-hmc.mdx
docs/neural/: ensembles.mdx  neural-ode.mdx  neural-regularization.mdx  rateflow-ode.mdx  universal-ode.mdx
docs/uncertainty/: ensembles.mdx  gapa.mdx  overview.mdx
docs/usage/: mcmc-basic.mdx  model-class.mdx  neural-ode.mdx  rateflow-ode.mdx  universal-ode.mdx
examples/: Basics.ipynb  DataImport.ipynb  GenerateData.ipynb  HMC.ipynb  InhomogeneousData.ipynb  MCMC.ipynb  NeuralODE.ipynb  NonObservableSpecies.ipynb  Optimization.ipynb  ReactorModelling.ipynb  SensitivityMatrixAnalysis.ipynb  SurrogateHMC.ipynb  UncertaintyQuantification.ipynb  UniversalODE.ipynb  try_Michaelis-Menten-equation.py  try_NeuralODE.py  try_Non-Observable-Menten-Inhibition.py
examples-with-units/: GenerateData.ipynb  GenerateData.py  HMC.ipynb  HMC.py  Optimization.ipynb  Optimization.py
kinetic-laws/: generate.py  law_function.jinja2  sbo_laws.json
specs/: update-arviz-v1.md
sysbiojax/: __init__.py  model.py  utils.py
tests/: conftest.py  create_enzymeml.py
(+68 files in other folders)
