[project]
name = "catalax"
version = "0.4.1"
description = "A JAX-based framework for (neural) ODE modelling in biocatalysis."
authors = [{ name = "Jan Range", email = "jan.range@simtech.uni-stuttgart.de" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
license = "MIT"
dependencies = [
    "matplotlib>=3.8.0,<4",
    "dotted-dict>=1.1.3,<2",
    "jax>=0.7.0,<0.8.0",
    "sympy~=1.12",
    "pandas>=2.2.3,<3",
    "tqdm>=4.66.1,<5",
    "numpy>=2.1.0,<3",
    "numpyro>=0.19.0,<0.20.0",
    "arviz>=0.22.0,<0.30.0",
    "corner>=2.2.2,<3",
    "lmfit>=1.2.2,<2",
    "jinja2>=3.1.2,<4",
    "ipywidgets>=8.1.1,<9",
    "optax>=0.2.5,<0.3",
    "diffrax>=0.7.0,<0.8",
    "pydantic>=2.9.2,<3",
    "equinox>=0.13,<0.14",
    "rich>=13.8.1,<14",
    "mlcroissant>=1.0.10,<2",
    "pyenzyme>=2.0.0,<3",
    "seaborn>=0.13.2,<0.14",
    "typing-extensions>=4.14.1,<5",
    "deprecated>=1.2.18",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "pytest-sugar>=1.1.1",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.packages.find]
where = ["catalax"]
