[project]
name = "catalax"
version = "0.5.4"
description = "A JAX-based framework for (neural) ODE modelling in biocatalysis."
authors = [{ email = "jan.range@simtech.uni-stuttgart.de", name = "Jan Range" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "matplotlib>=3.8.0,<4",
  "dotted-dict>=1.1.3,<2",
  "jax>=0.7.0,<0.8.0",
  "sympy~=1.12",
  "pandas>=2.2.3,<3",
  "tqdm>=4.66.1,<5",
  "numpy>=2.1.0,<3",
  "numpyro>=0.19.0,<0.20.0",
  "arviz>=0.22.0,<0.30.0",
  "corner>=2.2.2,<3",
  "lmfit>=1.3.4,<2",
  "jinja2>=3.1.2,<4",
  "ipywidgets>=8.1.1,<9",
  "optax>=0.2.5,<0.3",
  "diffrax>=0.7.0,<0.8",
  "pydantic>=2.9.2,<3",
  "equinox>=0.13,<0.14",
  "rich>=13.8.1,<14",
  "mlcroissant>=1.0.10,<2",
  "pyenzyme>=2.2.1,<3",
  "seaborn>=0.13.2,<0.14",
  "typing-extensions>=4.14.1,<5",
  "deprecated>=1.2.18",
]

[dependency-groups]
dev = [
  "jinja2>=3.1.6",
  "pre-commit>=4.3.0",
  "pytest>=8.4.1,<9",
  "pytest-sugar>=1.1.1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.ruff.lint]
ignore = ["E741"]

[tool.setuptools.packages.find]
where = ["catalax"]

[[tool.uv.index]]
explicit = true
name = "testpypi"
publish-url = "https://test.pypi.org/legacy/"
url = "https://test.pypi.org/simple/"
